syntax = "proto3";

package server.transaction;
option go_package = "github.com/xhayamix/proto-gen-spanner/pkg/domain/entity/transaction";

import "server/enums/active_user_type_gen.proto";
import "server/options/transaction/transaction.proto";

// ユーザー
message User {
  option (server.options.transaction.message) = {
    accessorType: AdminAndServer
    insertTiming: "新規ユーザー作成時",
  };

  // ユーザーID
  string userId = 1 [(server.options.transaction.field) = {
    ddl: { pk: true }
  }];

  // 公開ユーザーID
  string publicUserId = 2;
}
